workloads/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.home.drewdevlab.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: wildcard-home-tls
